--- a/package.json
+++ b/package.json
@@ -8,8 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-ssr": "^3.1.3",
+    "@leveluptuts/fresh": "^0.1.1",
+    "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-server-micro": "^2.10.1",
+    "dotenv": "^8.2.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
+    "graphql-toolkit": "^0.7.5",
+    "isomorphic-unfetch": "^3.0.0",
+    "mongoose": "^5.9.2",
     "next": "9.2.2",
     "react": "16.13.0",
     "react-dom": "16.13.0"
+  },
+  "devDependencies": {
+    "babel-plugin-import-graphql": "^2.7.0"
   }
 }
